--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,10 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'org.igniterealtime.smack:smack-core:4.1.1'
+    compile 'org.igniterealtime.smack:smack-tcp:4.1.1'
+    compile 'org.igniterealtime.smack:smack-resolver-javax:4.1.1'
+    compile 'org.igniterealtime.smack:smack-im:4.1.1'
+    compile 'org.igniterealtime.smack:smack-sasl-provided:4.1.1'
+    compile 'org.igniterealtime.smack:smack-java7:4.1.1'
 }
