--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,5 @@ dependencies {
     compile 'org.igniterealtime.smack:smack-im:4.1.1'
     compile 'org.igniterealtime.smack:smack-sasl-provided:4.1.1'
     compile 'org.igniterealtime.smack:smack-java7:4.1.1'
+    compile files('libs/darcula.jar')
 }
