--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,6 @@ dependencies {
     compile 'org.igniterealtime.smack:smack-sasl-provided:4.1.1'
     compile 'org.igniterealtime.smack:smack-java7:4.1.1'
     compile 'org.json:json:20141113'
+    compile 'com.h2database:h2:1.4.187'
     compile files('libs/darcula.jar')
 }
