--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     compile 'org.igniterealtime.smack:smack-tcp:4.1.1'
     compile 'org.igniterealtime.smack:smack-resolver-javax:4.1.1'
     compile 'org.igniterealtime.smack:smack-im:4.1.1'
-    compile 'org.igniterealtime.smack:smack-sasl-provided:4.1.1'
+    compile 'org.igniterealtime.smack:smack-sasl-javax:4.1.1'
     compile 'org.igniterealtime.smack:smack-java7:4.1.1'
     compile 'org.json:json:20141113'
     compile 'com.h2database:h2:1.4.187'
