Add MainWindow Add UserInfo structure to save user's information Add Database Control, but may not use Finished friends load status bar, but may not use

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile 'org.igniterealtime.smack:smack-im:4.1.1'
     compile 'org.igniterealtime.smack:smack-sasl-javax:4.1.1'
     compile 'org.igniterealtime.smack:smack-java7:4.1.1'
+    compile 'org.igniterealtime.smack:smack-extensions:4.1.1'
     compile 'org.json:json:20141113'
     compile 'com.h2database:h2:1.4.187'
     compile files('libs/darcula.jar')
