--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     compile 'org.igniterealtime.smack:smack-sasl-javax:4.1.1'
     compile 'org.igniterealtime.smack:smack-java7:4.1.1'
     compile 'org.igniterealtime.smack:smack-extensions:4.1.1'
+    compile 'com.yuvimasory:orange-extensions:1.3.0'
+    compile 'com.intellij:forms_rt:7.0.3'
 }
 
 jar {
